--- a/src/components/Thumbnail/Thumbnail.css
+++ b/src/components/Thumbnail/Thumbnail.css
@@ -12,6 +12,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    overflow: hidden;
 
     &:hover {
       background-color: var(--primary-1);
